--- a/satisfactory/pom.xml
+++ b/satisfactory/pom.xml
@@ -1,123 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.karuslabs</groupId>
-        <artifactId>elementary-project</artifactId>
-        <version>2.0.0</version>
-    </parent>
-    
-    <artifactId>satisfactory</artifactId>
-    <packaging>jar</packaging>
-    
-    <name>Satisfactory</name>
-    <description>Satisfactory is an Element matching library for annotation processors.</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.karuslabs</groupId>
+    <artifactId>elementary-project</artifactId>
+    <version>2.0.1</version>
+  </parent>
+  <artifactId>satisfactory</artifactId>
+  <packaging>jar</packaging>
+  <name>Satisfactory</name>
+  <description>Satisfactory is an Element matching library for annotation processors.</description>
+  <url>https://github.com/Pante/elementary</url>
+  <inceptionYear>2021</inceptionYear>
+  <properties>
+    <maven.deploy.skip>true</maven.deploy.skip>
+    <maven.site.skip>true</maven.site.skip>
+  </properties>
+  <scm>
+    <connection>scm:git:git://github.com/pante/elementary.git</connection>
+    <developerConnection>scm:git:ssh://github.com/pante/elementary.git</developerConnection>
     <url>https://github.com/Pante/elementary</url>
-    <inceptionYear>2021</inceptionYear>
-
-    <properties>
-        <maven.deploy.skip>true</maven.deploy.skip>
-        <maven.site.skip>true</maven.site.skip>
-    </properties>
-
-    <scm>
-        <connection>scm:git:git://github.com/pante/elementary.git</connection>
-        <developerConnection>scm:git:ssh://github.com/pante/elementary.git</developerConnection>
-        <url>https://github.com/Pante/elementary</url>
-    </scm>
-
-    <developers>
-        <developer>
-            <name>Matthias Ngeo</name>
-            <email>matthiasngeo@gmail.com</email>
-            <url>https://github.com/Pante</url>
-        </developer>
-    </developers>
-
-    <licenses>
-        <license>
-            <name>MIT License</name>
-            <url>https://www.opensource.org/licenses/mit-license.php</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    
-    <dependencies>
-        <dependency>
-            <groupId>com.karuslabs</groupId>
-            <artifactId>utilitary</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.jgrapht</groupId>
-            <artifactId>jgrapht-core</artifactId>
-            <version>1.5.2</version>
-            <scope>compile</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>com.karuslabs</groupId>
-            <artifactId>elementary</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-    
-    <build>
-        <plugins>  
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.12.1</version>
-                <configuration>
-                    <release>17</release>
-                </configuration>
-            </plugin>
-            
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.1</version>
-                <executions>
-                    <execution>
-                        <id>copy-resources</id>
-                        <phase>process-test-classes</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/test-classes/</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>${basedir}/src/test/java/</directory>
-                                    <includes>
-                                        <include>**/*.*</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            
-            <plugin>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <minimizeJar>true</minimizeJar>
-                    <shadedArtifactAttached>true</shadedArtifactAttached>
-                    <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                    </transformers>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  </scm>
+  <developers>
+    <developer>
+      <name>Matthias Ngeo</name>
+      <email>matthiasngeo@gmail.com</email>
+      <url>https://github.com/Pante</url>
+    </developer>
+  </developers>
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>https://www.opensource.org/licenses/mit-license.php</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <dependencies>
+    <dependency>
+      <groupId>com.karuslabs</groupId>
+      <artifactId>utilitary</artifactId>
+      <version>${project.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jgrapht</groupId>
+      <artifactId>jgrapht-core</artifactId>
+      <version>1.5.2</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.12.1</version>
+        <configuration>
+          <release>17</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.3.1</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>process-test-classes</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/test-classes/</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${basedir}/src/test/java/</directory>
+                  <includes>
+                    <include>**/*.*</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
