--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,18 +1,18 @@
 name: Build Elementary
 
 on:
+  workflow_dispatch: {}
   push:
     branches:
       - master
-  pull_request: {}
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: styfle/cancel-workflow-action@0.12.1
-        with:
-          access_token: ${{ github.token }}
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
@@ -20,4 +20,3 @@ jobs:
           distribution: temurin
       - run: chmod +x ./mvnw
       - run: ./mvnw install
-      - run: bash <(curl -s https://codecov.io/bash)
