--- a/pom.xml
+++ b/pom.xml
@@ -198,8 +198,8 @@
           <links>
             <link>https://checkerframework.org/api/</link>
             <link>https://junit.org/junit5/docs/current/api/</link>
-            <link>https://repo.karuslabs.com/repository/elementary/${repository-head}/elementary/apidocs</link>
-            <link>https://repo.karuslabs.com/repository/elementary/${repository-head}/utilitary/apidocs</link>
+            <link>https://www.javadoc.io/doc/com.karuslabs/elementary/latest/</link>
+            <link>https://www.javadoc.io/doc/com.karuslabs/utilitary/latest/</link>
           </links>
         </configuration>
         <executions>
